Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7404

uic3: When a Qt 3 ui file has a name set for a layout this is not respected by uic3

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 4.6.2
    • 4.6.0
    • Tools: Designer
    • None
    • a5834ce3f97c1a8e01f1c7cad51ff02d21a20c68

    Description

      uic3: When a Qt 3 ui file has a name set for a layout this is not respected by uic3. The attached file - form1.ui is a sample ui file that can be used to reproduce the problem.

      The patch attached should solve the problem, but this needs to be verified against bigger projects that continue to use Qt 3 support (e.g. KDE)

      Attachments

        1. form1.ui
          2 kB
        2. patch.diff
          0.4 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            anshaw Andy Shaw (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes