uic3: Introduced option to preserve layout object names of Designer 3.

Introduce options flag mask for better handling in UI3Reader. Pass
on layout name.
Task-number: QTBUG-7404
Reviewed-by: Jarek Kobus <jkobus@trolltech.com>
Initial-patch-by: Andy Shaw <andy.shaw@nokia.com>